--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "Start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix cliet && npm run build --prefix client"
   },
   "author": "Jad Saad",
   "license": "MIT",
